# clearright

./: LICENSE  README.md  deploy.sh  run_local.sh
client/: Dockerfile  package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: ConversationPanel.tsx  DocumentUpload.tsx  Toast.tsx
client/src/hooks/: useLiveConnection.ts
server/: Dockerfile  main.py  pyproject.toml
server/clearright_agent/: agent.py  prompts.py  tools.py
